# pangloss-interface

./: .gitignore  .prettierrc  ProjectTranslation.ts  README.md  app.config.ts  bun.lockb  package-lock.json  package.json  pangloss  pangloss_core  pyproject.toml  tailwind.config.js  tsconfig.json
interface/: .gitignore  ProjectConfig.ts  ProjectTranslation.ts  app.config.ts  bun.lockb  package-lock.json  package.json  schema-zod.ts  schema.ts  tailwind.config.cjs  test_valibot.ts
interface/newSchema/: index.ts
interface/newSchema/core/: OpenAPI.ts
interface/src/: apiClient.ts  app.css  app.tsx  entry-server.tsx  testTypes.ts
pangloss_interface/: __init__.py  api.py  cli.py  components.json  initialisation.py  models.py  package.json  tsconfig.json  utils.py
pangloss_interface/frontend_types/: build_frontend_translations.py  build_frontend_types.py
pangloss_interface/generate_config/: gather_custom_components.py  generate_blank_translation.py  generate_config.py  generate_model_fields_definitions.py  generate_translation.py  generate_translation_dicts.py  generate_translation_from_diffs.py  generate_typescript.py  generate_typescript2.py  generate_validators.py
pangloss_interface/interface_translations/: de.json  en.json  fr.json
pangloss_interface/scripts/: build_frontend_translations.py  create_translation_file.py  create_typescript_types.py
pangloss_interface/src/: apiClient.ts  app.css  app.tsx  entry-server.tsx
src/: ApiClient.ts  app.css  app.tsx  entry-server.tsx  types.ts  validators.ts
src/components/: CreateForm.tsx  LoginForm.tsx  Nav.tsx  ViewItems.tsx  ViewModifyDetails.tsx
src/contexts/: translation.ts  users.tsx
src/routes/: index.tsx
src/utils/: createRefetchableAsync.ts  prefetch.ts
(+181 files in other folders)
