[project]
name = "pangloss-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Richard Hadden", email = "richard.hadden@oeaw.ac.at" }
]
requires-python = ">=3.13"
dependencies = [
    "frozendict>=2.4.6",
    "jinja2>=3.1.6",
    "pangloss",
    "typer>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pangloss = { path = "../pangloss", editable = true }
